Add Chinese translation
Forget a sentense

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -889,4 +889,8 @@
 	
     <!-- Power/reboot dialogs dim amount -->
     <string name="power_menu_dialog_dim">电源菜单背景阴影</string>
+		
+    <!-- SystemUI restart prompt -->
+    <string name="systemui_restart_title">警告</string>
+    <string name="systemui_restart_message">系统界面将会重启使设置生效</string>
 </resources>
