AicpExtras: Clean spanish translations
Change-Id: Iacae0273b172127cfc985d1d0f4e123a7a3c6bd4

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -227,9 +227,9 @@
     <string name="logcat_title">Logcat</string>
     <string name="kmesg_title">Kmesg</string>
     <string name="dmesg_title">Dmesg</string>
-    <string name="log_it_title">Acoplar</string>
-    <string name="log_it_dialog_title">Acoplar</string>
-    <string name="log_that_shit_title">Log de datos</string>
+    <string name="log_it_title">Compartir</string>
+    <string name="log_it_dialog_title">Compartir</string>
+    <string name="log_that_shit_title">Log &amp; debug</string>
     <string name="logcat_warning">Compartir o desechar!</string>
     <string name="share_title">Compartir...</string>
     <string name="log_it_share_subject">logs Aicp</string>
@@ -403,7 +403,7 @@
     <string name="quick_settings_vibrate_summary">Vibrar al tocar un ajuste rápidos</string>
 
     <!-- Advanced data tile -->
-    <string name="qs_advanced_data_title">Ajuste de datos avanzado</string>
+    <string name="qs_advanced_data_title">Interruptor rápido de datos</string>
     <string name="qs_advanced_data_summary">Habilita tocar una sola vez para activar o desactivar los datos</string>
 
     <!-- SystemUI restart prompt -->
@@ -471,12 +471,12 @@
     <string name="recents_clear_all_location_bottom_center">Abajo en el centro</string>
 
     <!-- Heads up settings -->
-    <string name="nav_headsup_title">Notificaciones intrusivas</string>
-    <string name="headsup_settings_category">Notificaciones intrusivas</string>
-    <string name="headsup_settings_title">Habilitar Notificaciones intrusivas</string>
+    <string name="nav_headsup_title">Notificaciones emergentes</string>
+    <string name="headsup_settings_category">Notificaciones emergentes</string>
+    <string name="headsup_settings_title">Habilitar Notificaciones emergentes</string>
     <string name="headsup_settings_summary">Permite mostrar notificaciones interactivas en una ventana nueva en la pantalla.</string>
-    <string name="summary_heads_up_enabled">Notificaciones intrusivas habilitadas</string>
-    <string name="summary_heads_up_disabled">Notificaciones intrusivas deshabilitadas</string>
+    <string name="summary_heads_up_enabled">Notificaciones emergentes habilitadas</string>
+    <string name="summary_heads_up_disabled">Notificaciones emergentes deshabilitadas</string>
 
     <!-- Heads up timeout -->
     <string name="heads_up_time_out_title">Tiempo de espera</string>
@@ -531,7 +531,7 @@
 
     <!-- MediaScanner behavior on boot -->
     <string name="media_scanner_on_boot_title">Escáner multimedia en el inicio</string>
-    <string name="media_scanner_on_boot_enabled">Escanear fichero multimedia</string>
+    <string name="media_scanner_on_boot_enabled">Escanear ficheros multimedia</string>
     <string name="media_scanner_on_boot_ask">Preguntar (notificación)</string>
     <string name="media_scanner_on_boot_disabled">No escanear ficheros multimedia</string>
 
@@ -556,14 +556,14 @@
     <string name="system_app_remover">Gestor de aps. de sistema</string>
 
     <!-- Extensions settings -->
-    <string name="extensions_title">Extensiones del sistema</string>
+    <string name="extensions_title">Sistema</string>
 
     <!-- Bluetooth status -->
     <string name="bluetooth_battery_title">Mostrar estado de la batería en Blueetooth</string>
     <string name="bluetooth_battery_summary">Muestra, si está disponible, el estado de la batería del dispositivo conectado por bluetooth.</string>
 
     <!-- Three-fingers-swipe to screenshot -->
-    <string name="three_finger_gesture">Deslizar para capturar pantallaSwipe to screenshot</string>
+    <string name="three_finger_gesture">Deslizar para capturar pantalla</string>
     <string name="three_finger_gesture_summary">Desliza tres dedos por la pantalla para hacer una captura</string>
 
 </resources>
