Update Italian translation
Change-Id: I0f3aaa430ecca738d694d1dbf5963564ffadd18b

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -39,13 +39,15 @@
     <string name="aicp_downloads_title">Downloads</string>
     <string name="dwnld_summary">Visita la pagina di download AICP per il dispositivo</string>
     <string name="aicp_gerrit_title">Gerrit</string>
+    <string name="ae_version_title">Versione AICP Extras</string>
+    <string name="ae_version_summary">0.3.0</string>
     <string name="gerrit_summary">Visita la nostra pagina su Gerrit per sapere su che cosa stiamo lavorando</string>
     <string name="hidden_anim_activity_title">Tempo per lo Yoga!!!</string>
     <string name="hidden_anim_more_title">ANCORA?</string>
     <string name="hidden_anim_more_nice">BENE</string>
     <string name="continue_title">Continua</string>
     <string name="settings_activity_title">Impostazioni AE</string>
-
+    <string name="recents_panel_title">Pannello recenti</string>
     <string name="nothing_title">Ancora nulla da mostrare qui, passa oltre</string>
 
     <!-- Switch On/Off  -->
@@ -349,7 +351,7 @@
 
     <!-- App Exit Toast -->
     <string name="app_exit_toast">Premi di nuovo per uscire</string>
-
+    
   <!-- Volume dialog stroke settings -->
   <string name="volume_dialog_stroke_title">Bordo finestra</string>
   <string name="volume_dialog_stroke_disabled">Disattivato</string>
@@ -394,6 +396,7 @@
     <string name="ae_custom_colors_summaries">Utilizzare le seguenti impostazioni per modificare l\'aspetto di AE</string>
     <string name="ae_drawer_opacity_title">Opacità del drawer di navigazione</string>
     <string name="ae_drawer_bg_color_title">Colore di spostamento drawer bg</string>
+    <string name="ae_header_bg_image_color_title">Colore immagine di navigazione intestazione bg</string>
     <string name="ae_settings_restore_defaults_title">Ripristino predefinito</string>
     <string name="values_restored_title">Valori ripristinati</string>
     <string name="ae_header_bg_image_opacity_title">Opacità dell\'immagine di navigazione intestazione bg del drawer</string>
@@ -509,6 +512,8 @@
   <string name="heads_up_snooze_10min">10 minuti</string>
   <string name="heads_up_snooze_15min">15 minuti</string>
   <string name="heads_up_snooze_20min">20 minuti</string>
+  <string name="heads_up_snooze_30min">30 minuti</string>
+   <string name="heads_up_snooze_60min">60 minuti</string>
   
   <!-- Lockscreen battery info indicator  -->
   <string name="lockscreen_battery_info_title">Info batteria nella schermata di blocco</string>
